Bug 137370 - Styles selection is English-only, no matter what the UI language is
Summary: Styles selection is English-only, no matter what the UI language is
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.1.0
Keywords: regression
: 137226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-10-09 10:54 UTC by Thomas Weber
Modified: 2020-12-24 10:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Weber 2020-10-09 10:54:12 UTC
The styles selection is always in English (e.g. "Accent, Heading"), no matter what language is set for the user interface. I tried German and French and it seems that there is either a bug in the code not using the translations or that there are no translations - which would be quite a regression.
I confirmed this on both Linux and Windows.
Comment 1 Eike Rathke (retired, only occasionally showing up) 2020-10-09 12:24:36 UTC
This appears to be a regression from along the lines of

commit 7b0aed617f1e57335837cf56ef2d222a96f8270d
CommitDate: Wed Sep 28 11:42:56 2016 +0000

    Remove old cell styles from calc

and

commit 06f319937187f76ee402d53b3baa78c391c2af19
CommitDate: Sun Oct 2 13:51:26 2016 +0000

    tdf#90937 Add a set of cell styles to calc

where we now have translatable strings not matching the internal style names anymore.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2020-10-09 21:42:14 UTC
Taking.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2020-10-10 13:55:47 UTC
*** Bug 137226 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2020-10-10 14:00:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a3466851c22920aa57443cb31b8f0c57d6c73ce

Resolves: tdf#137370 Re-enable UI translated standard cell style names

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.