Resolves: tdf#137370 Re-enable UI translated standard cell style names

Regression from style rework

    commit 7b0aed617f1e57335837cf56ef2d222a96f8270d
    CommitDate: Wed Sep 28 11:42:56 2016 +0000

	Remove old cell styles from calc

to

    commit 06f319937187f76ee402d53b3baa78c391c2af19
    CommitDate: Sun Oct 2 13:51:26 2016 +0000

	tdf#90937 Add a set of cell styles to calc

Change-Id: I34dddb3ca3e54e3da5db112e1f9bcc8437fbda77
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104141
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins